<resources>
    <string name="app_name">OxfordTour</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Local_Events">Events</string>
    <string name="nav_signup">Signup/Login</string>
    <string name="Personal_Info_Page">Personal Information</string>
    <string name="User_Firstname_Header">Firstname</string>
    <string name="User_Lastname_Header">Lastname</string>
    <string name="User_Age_Header">Age</string>
    <string name="User_Email_Header">Email</string>
    <string name="Edit_Personal_Info">Edit Personal Information</string>
    <string name="User_Password_Header">Password(*)</string>
    <string name="Edit_Firstname_Hint">Edit Firstname</string>
    <string name="Edit_Lastname_Hint">Edit Lastname</string>
    <string name="Edit_Age_Hint">Edit Age</string>
    <string name="Edit_Email_Hint">Update Your Email</string>
    <string name="Save_Details">Save Details</string>
    <string name="Edit_Password_Hint">Edit Password(*)</string>
    <string name="Professional_Info_Page">Professional Information</string>
    <string name="Edit_Professional_Info">Edit Professional Information</string>
    <string name="Place1">Ashmolean Museum</string>
    <string name="title_activity_ashmolean_musuem">AshmoleanMusuem</string>
    <string name="Place2">Christ Church</string>
    <string name="Place3">Magdalen College</string>
    <string name="AshMusPicDescrip" translatable="false">Places Image for Ash Museum</string>
    <string name="ChristChurchPicDescrip" translatable="false">Places Image for ChristChurch</string>
    <string name="MagdalenCollegePicDescrip" translatable="false">Places Image for MagadalenCollege</string>
    <string name="Landmarks_Button">Landmarks</string>
    <string name="Restaurants_Button">Restaurants</string>
    <string name="Oxford_Kitchen_Button">The Oxford Kitchen</string>
    <string name="Cherwell_Boathouse_Button">Cherwell Boathouse</string>
    <string name="No1_Ship_Street_Button">No.1 Ship Street</string>
    <string name="Address_Oxford_Kitchen">Address: 215 Banbury Road, Oxford OX2 7HQ England</string>
    <string name="Hours_Oxford_Kitchen">Hours: Tue - Sat 12:00 - 14:30 and 18:00 - 23:00</string>
    <string name="Website_Oxford_Kitchen">website: <a href="oxford_kitchen_website">http://www.theoxfordkitchen.co.uk</a></string>
    <string name="MainText_Oxford_Kitchen">Michelin-starred, nostalgic British dishes with a modern twist.
        Inspired creations of Executive Chef Paul Welburn, whose food has the critics talking.
        Paul is renowned for adding a modern twist to some of Britain’s favourite dishes.
        The Oxford Kitchen offers you a contemporary, intimate setting and friendly, attentive service
        ideal for savouring the exquisite flavour combinations of their a la carte and tasting menus.
        Choose from their carefully compiled wine list or start your meal with one of their signature cocktails made with fresh,
        local ingredients.</string>
    <string name="OxfordKitchenPicDescription1" translatable="false"> Oxford Kitchen</string>
    <string name="OxfordKitchenPicDescription2" translatable="false"> Oxford Kitchen </string>
    <string name="Address_Cherwell_Boathouse">Address: 50 Bardwell Road, Oxford, England, OX2 6ST, United Kingdom</string>
    <string name="Hours_Cherwell_Boathouse">Hours: 12.30-3pm 6.30-9.30pm.</string>
    <string name="Website_Cherwell_Boathouse">website: <a href="cherwell_boathouse_website">http://cherwellboathouse.co.uk/</a></string>
    <string name="MainText_Cherwell_Boathouse">A restaurant combined with a punt station,
        the Cherwell Boathouse boasts one of the best views in the city.
        This allows you to look out over the river with a glass from their extensive wine list,
        which has won ‘Wine List of the Year’ from the Good Food Guide.
        Owned by the Verdin family since 1968, when the restaurant was first opened,
        the menu matches British ingredients with Gallic flair.
        Delicious, unusual dishes on the menu include an artichoke crème caramel, fillet of beef with foie gras
        and a white chocolate and cardamom mousse.
        A perfect end to a day spent enjoying Oxford’s many treasures is to indulge in a meal in this ideal spot
        overlooking the historic pastime of punting.</string>
    <string name="CherwellPicDescription1" translatable="false"> Cherwell boathouse</string>
    <string name="CherwellPicDescription2" translatable="false"> Cherwell boathouse</string>
    <string name="CherwellPicDescription3" translatable="false"> Cherwell boathouse</string>
    <string name="Address_No1_ShipStreet">Address: 50 Bardwell Road, Oxford, England, OX2 6ST, United Kingdom</string>
    <string name="Hours_No1_ShipStreet">Hours: Sun: 12:00 - 15:30 Mon - Sat: 12:00 - 23:00</string>
    <string name="Website_No1_ShipStreet">website: <a href="shipstreet_website">https://www.no1shipstreet.com/</a></string>
    <string name="MainText_No1_ShipStreet">The Ground Floor is a Modern British Brasserie.
        The First Floor is a Champagne, Oyster and Cocktail Bar.
        Bar dining, full A La Carte Menu available.
        Daily specials board with oysters, lobster and market fish of the day.</string>
    <string name="No1ShipstreetPicDescription1" translatable="false"> No1 ShipStreet</string>
    <string name="No1ShipstreetPicDescription2" translatable="false"> No1 ShipStreet</string>
    <string name="Title_Ashmolean">Ashmolean Museum</string>
    <string name="Address_Ashmolean">Address: Beaumont Street, Oxford OX1 2PH.</string>
    <string name="Hours_Ashmolean">Hours Tue – Sun 10:00 – 17:00</string>
    <string name="Website_Ashmolean">Website: <a href="AshmoleanMuseumWebsite">http://www.ashmolean.org</a></string>
    <string name="MainText_Ashmolean">The Ashmolean Museum of Art and Archaeology
        on Beaumont Street, Oxford, England, is the worlds first university museum.
        Its first building was erected in 1678–83 to house the cabinet of curiosities that
        \'Elias Ashmole\' gave to the University of Oxford in 1677.</string>
    <string name="Ashmolean_Signup_Button">Sign up to tour</string>
    <string name="Ashmolean_Review_Button">Review this place</string>
    <string name="Beacon_Festival">Beacon Festival</string>
    <string name="Oxford_Literary_Festival">Oxford Literary Festival</string>
    <string name="We_Will_Rock_You">We Will Rock You</string>
    <string name="Milton_Impossible">Milton Impossible</string>
    <string name="Oxford_Boxing_Championships">Oxford Boxing Championships</string>
    <string name="SignUp1">Sign Up</string>
    <string name="SignUp2">Sign Up</string>
    <string name="SignUp3">Sign Up</string>
    <string name="SignUp4">Sign Up</string>
    <string name="SignUp5">Sign Up</string>
    <string name="Title_Christ_Church">Christ Church</string>
    <string name="About_Christ_Church">With its compelling combination of majestic architecture, literary heritage and double identity as (parts of) Harry Potter’s Hogwarts, Christ Church attracts tourists galore. Among Oxford’s largest colleges – the largest, if you include its bucolic meadow – and proud possessor of its most impressive quad, plus a superb art gallery and even a cathedral, it was founded in 1525 by Cardinal Wolsey. It later became home to Lewis Carroll, whose picnic excursions with the then-dean’s daughter gave us Alice Adventures in Wonderland.</string>
    <string name="Details">Details</string>
    <string name="Info">Contact Number -01865-276492
                      Hours - 10am-5pm Mon-Sat, from 2pm Sun, last admission 4.15pm
                      Price - adult/child Jul-Aug £10/9, Sep-Jun £8/7</string>
    <string name="Christ_Church_Link">www.chch.ox.ac.uk/</string>
    <string name="Christ_Church_Review">Review</string>
    <string name="Christ_Church_SignUp">Sign Up</string>
    <string name="title_activity_maps_page">Map</string>
    <string name="RatingsTitle">Ratings</string>
    <string name="ratingsplace1">ASHMOLEAN MUSUEM - Musuem of Art and Archaelogy</string>
    <string name="ratingsplace2">CHRIST CHURCH - Literary heritage and a cathedral</string>
    <string name="ratingsplace3">MAGDALEN COLLEGE - The Deer park and beautiful Cloisters</string>
    <string name="ratingsrestaurant1">Oxford Kitchen</string>
    <string name="ratingsrestaurant2">Cherwell Boathouse</string>
    <string name="ratingsrestaurant3">No.1 Ship Street</string>
    <string name="GoTo1">Click Here To see more</string>
    <string name="GoTo2">Click Here To see more</string>
    <string name="GoTo3">Click Here To see more</string>
    <string name="GoTo4">Click Here To see more</string>
    <string name="GoTo5">Click Here To see more</string>
    <string name="GoTo6">Click Here To see more</string>
    <string name="magdalen_college">Magdalen_College</string>
    <string name="magdalen_college_runs_regular_outreach_events_in_oxford_and_in_schools_these_are_run_for_state_maintained_schools_and_schools_with_a_high_proportion_of_students_from_groups_that_are_under_represented_at_oxford_our_events_are_primarily_for_schools_located_in_our_seven_link_regions_barnsley_brent_nottingham_nottinghamshire_rotherham_sheffield_and_westminster_if_you_are_not_based_in_one_of_these_regions_but_would_like_to_organise_an_outreach_event_with_the_university_of_oxford_then_please_find_your_link_college_here" translatable="false">magdalen_college_runs_regular_outreach_events_in_oxford_and_in_schools_these_are_run_for_state_maintained_schools_and_schools_with_a_high_proportion_of_students_from_groups_that_are_under_represented_at_oxford_our_events_are_primarily_for_schools_located_in_our_seven_link_regions_barnsley_brent_nottingham_nottinghamshire_rotherham_sheffield_and_westminster_if_you_are_not_based_in_one_of_these_regions_but_would_like_to_organise_an_outreach_event_with_the_university_of_oxford_then_please_find_your_link_college_here</string>
    <string name="contact_number_01865_276492_hours_10am_5pm_mon_sat_from_2pm_sun" translatable="false">contact_number_01865_276492_hours_10am_5pm_mon_sat_from_2pm_sun</string>
    <string name="www_magd_ox_ac_uk" translatable="false">www_magd_ox_ac_uk</string>
    <string name="magdalen_college_review">Magdalen_College_Review</string>
    <string name="magdalen_college_signup">Magdalen_College_SignUp</string>
    <string name="new_user">Add User</string>
    <string name="save">Save</string>
    <string name="saved">User Saved</string>
    <string name="not_saved">Couldn\'t Save</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="email_address">Email Address</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="sign_up">Signup</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="create_account">Create Account</string>
    <string name="tg_box">Tour Guide Account</string>
    <string name="log_out">Logout</string>
    <string name="Language_Settings">Language</string>
    <string name="English_Language_Selection">English</string>
    <string name="Japanese_Language_Selection">Japanese</string>
</resources>