<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/Language_settings"
        android:orderInCategory="1"
        android:title="@string/Language_Settings"
        app:showAsAction="never" >
        <menu>
            <item
                android:id="@+id/English_Selection"
                android:orderInCategory="1"
                android:title="@string/English_Language_Selection"
                app:showAsAction="never">
            </item>
            <item
                android:id="@+id/Japanese_Selection"
                android:orderInCategory="2"
                android:title="@string/Japanese_Language_Selection"
                app:showAsAction="never">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/log_out"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="never"
        />
</menu>
