<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AshmoleanMusuem">

    <EditText
        android:id="@+id/Title_Ashmolean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/Title_Ashmolean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-1dp" />

    <TextView
        android:id="@+id/Address_Ashmolean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Address_Ashmolean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="44dp" />

    <TextView
        android:id="@+id/Hours_Ashmolean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hours_Ashmolean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="63dp" />

    <TextView
        android:id="@+id/Website_Ashmolean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Website_Ashmolean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="82dp" />

    <TextView
        android:id="@+id/MainText_Ashmolean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainText_Ashmolean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="144dp" />
</android.support.constraint.ConstraintLayout>